feat: use edn config