@@ -11,6 +11,8 @@
                  [ring/ring-json "0.5.1" ]
                  [ring/ring-defaults "0.3.3" :exclusions [[javax.servlet/javax.servlet-api]] :scope "provided"]
 
+                 [cprop "0.1.19"]
+
                  [ch.qos.logback/logback-classic "1.2.10" ]
                  [org.clojure/tools.logging "1.2.4" ]
                  [com.layerware/hugsql "0.5.1"]
@@ -19,9 +21,9 @@
 
                  ;; 数据驱动, 对应要改restsql/db/datasource-options的配置
                  ;;
-                 [com.h2database/h2 "1.4.200"]
+
                  ;;版本地址: https://mvnrepository.com/artifact/mysql/mysql-connector-java
-                 ;[mysql/mysql-connector-java "8.0.28"]
+                 [mysql/mysql-connector-java "8.0.28"]
                  ;;版本地址 https://mvnrepository.com/artifact/org.postgresql/postgresql
                  ;[org.postgresql/postgresql "42.3.1"]
                  ]
@@ -45,5 +47,26 @@
   :main restsql.core
   :aot :all
   :javac-options ["-target" "1.8" "-source" "1.8" "-Xlint:-options"]
-  :uberjar-name "restsql.jar"
-  :repl-options {:init-ns restsql.core})
+
+  :repl-options {:init-ns restsql.core}
+
+  :profiles
+  {
+   :dev          [:project/dev]
+   :test         [:project/dev :project/test]
+
+   :project/test {:jvm-opts ["-Dconf=config-test.edn"]}
+
+   :project/dev  {:jvm-opts     ["-Dconf=config-dev.edn"]
+                  :plugins      [[lein-ring "0.12.6"]]
+                  :dependencies [[ring/ring-mock "0.4.0"]
+                                 [ring/ring-devel "1.7.1"]
+                                 [com.h2database/h2 "1.4.200"]]}
+   :uberjar      {:omit-source  true
+                  :aot          :all
+                  :jvm-opts
+                  ["-XX:+IgnoreUnrecognizedVMOptions"
+                   "-Xverify:none"
+                   "-Djava.awt.headless=true"
+                   "-XX:-OmitStackTraceInFastThrow"]
+                  :uberjar-name "restsql.jar"}})
